# uplc

./: .gitignore  Cargo.toml  Justfile  NOTICE  README.md
.github/: CODEOWNERS
benches/: bench_main.rs
crates/uplc/: Cargo.toml  build.rs
crates/uplc-fuzz/: Cargo.toml  README.md
crates/uplc-fuzz/src/: divergence.rs  lib.rs  main.rs  seed.rs  stats.rs  tui.rs  worker.rs
crates/uplc-fuzz/src/eval/: external.rs  internal.rs
crates/uplc-macros/: Cargo.toml
crates/uplc/benches/: bench_main.rs  bytecode.rs  flat_decode.rs
crates/uplc/benches/benchmarks/: add_integer.rs  fibonacci.rs  haskell.rs  mod.rs  real_world.rs  turbo.rs  utils.rs
crates/uplc/benches/simple/: main.rs  simple.rs
crates/uplc/benches/simple/simple/: add_integer.rs  fibonacci.rs  utils.rs
crates/uplc/benches/turbo/: main.rs
crates/uplc/benches/use_cases/: main.rs  turbo.rs
crates/uplc/examples/: bc_dump.rs  bc_stats.rs  bench_loop.rs  check_max_var.rs  eval_flat.rs  eval_flat_bc.rs  gen_expected.rs  profile.rs  profile_bc.rs
crates/uplc/src/: arena.rs  bls.rs  constant.rs  data.rs  ledger_value.rs  lib.rs  program.rs  term.rs  typ.rs
crates/uplc/src/binder/: debruijn.rs  mod.rs  name.rs  named_debruijn.rs
crates/uplc/src/builtin/: default_function.rs  mod.rs
crates/uplc/src/bytecode/: DESIGN.md  compiler.rs  mod.rs  vm.rs
crates/uplc/src/flat/: builtin.rs  data.rs  mod.rs  tag.rs  zigzag.rs
crates/uplc/src/flat/decode/: decoder.rs  error.rs  mod.rs
crates/uplc/src/flat/encode/: encoder.rs  error.rs  mod.rs
crates/uplc/src/machine/: cek.rs  context.rs  discharge.rs  env.rs  error.rs  eval_result.rs  info.rs  mod.rs  runtime.rs  state.rs  value.rs
crates/uplc/src/machine/cost_model/: builtin_costs.rs  cost_map.rs  costing.rs  ex_budget.rs  machine_costs.rs  mod.rs  value.rs
crates/uplc/src/machine/cost_model/builtin_costs/: builtin_costs_v1.rs  builtin_costs_v2.rs  builtin_costs_v3.rs  mod.rs
crates/uplc/src/syn/: constant.rs  data.rs  mod.rs  program.rs  term.rs  typ.rs  types.rs  utils.rs  version.rs
crates/uplc/tests/: case_bool_conformance.rs  conformance.rs  conformance_bytecode.rs  conformance_extra.rs  conformance_flat.rs  divergence_tests.rs  flat_roundtrip.rs
crates/uplc/tests/conformance/builtin/semantics/chooseDataByteString/: chooseDataByteString.uplc.expected
crates/uplc/tests/conformance/builtin/semantics/chooseDataConstr/: chooseDataConstr.uplc.expected
crates/uplc/tests/conformance/builtin/semantics/chooseDataInteger/: chooseDataInteger.uplc.expected
crates/uplc/tests/conformance/builtin/semantics/chooseDataList/: chooseDataList.uplc.expected
crates/uplc/tests/conformance/builtin/semantics/chooseDataMap/: chooseDataMap.uplc.expected
crates/uplc/tests/conformance/builtin/semantics/dropList-overflow/: dropList-overflow.uplc
crates/uplc/tests/conformance/example/churchSucc/: churchSucc.uplc.expected
crates/uplc/tests/conformance/example/churchZero/: churchZero.uplc.expected
crates/uplc/tests/conformance/example/force-lam/: force-lam.uplc.expected
crates/uplc/tests/conformance/example/succInteger/: succInteger.uplc.expected
crates/uplc/tests/conformance/flat/: README.md
crates/uplc/tests/conformance/flat/example/ApplyAdd1/: ApplyAdd1.fixture.json
crates/uplc/tests/conformance/flat/example/ApplyAdd2/: ApplyAdd2.fixture.json
crates/uplc/tests/conformance/flat/example/DivideByZero/: DivideByZero.fixture.json
crates/uplc/tests/conformance/flat/example/DivideByZeroDrop/: DivideByZeroDrop.fixture.json
crates/uplc/tests/conformance/flat/example/IfIntegers/: IfIntegers.fixture.json
crates/uplc/tests/conformance/flat/example/NatRoundTrip/: NatRoundTrip.fixture.json
crates/uplc/tests/conformance/flat/example/ScottListSum/: fixture.json
crates/uplc/tests/conformance/flat/example/churchSucc/: churchSucc.fixture.json
crates/uplc/tests/conformance/flat/example/churchZero/: churchZero.fixture.json
crates/uplc/tests/conformance/flat/example/even2/: even2.fixture.json
crates/uplc/tests/conformance/flat/example/even3/: even3.fixture.json
crates/uplc/tests/conformance/flat/example/evenList/: fixture.json
crates/uplc/tests/conformance/flat/example/factorial/: factorial.fixture.json
crates/uplc/tests/conformance/flat/example/fibonacci/: fibonacci.fixture.json
crates/uplc/tests/conformance/flat/example/force-lam/: fixture.json
crates/uplc/tests/conformance/flat/example/overapplication/: fixture.json
crates/uplc/tests/conformance/flat/example/succInteger/: succInteger.fixture.json
crates/uplc/tests/conformance/flat/term/argExpected/: argExpected.fixture.json
crates/uplc/tests/conformance/flat/term/closure/: fixture.json
crates/uplc/tests/conformance/flat/term/nonFunctionalApplication/: nonFunctionalApplication.fixture.json
crates/uplc/tests/conformance/flat/term/unlifting-sat/: unlifting-sat.fixture.json
crates/uplc/tests/conformance/flat/term/unlifting-unsat/: unlifting-unsat.fixture.json
crates/uplc/tests/conformance/term/app/app-6/: app-6.uplc.expected
crates/uplc/tests/conformance/term/app/app-7/: app-7.uplc.expected
crates/uplc/tests/conformance/term/case/case-10/: case-10.uplc.expected
crates/uplc/tests/conformance/term/case/case-11/: case-11.uplc
crates/uplc/tests/conformance/term/case_bool/case_bool-1/: case_bool-1.uplc
crates/uplc/tests/conformance/term/case_bool/case_bool-2/: case_bool-2.uplc
crates/uplc/tests/conformance/term/case_bool/case_bool-3/: case_bool-3.uplc
crates/uplc/tests/conformance/term/case_bool/case_bool-4/: case_bool-4.uplc  case_bool-4.uplc.budget.expected
crates/uplc/tests/conformance/term/case_bool/case_bool-5/: case_bool-5.uplc  case_bool-5.uplc.budget.expected  case_bool-5.uplc.expected
crates/uplc/tests/conformance/term/closure/: closure.uplc.expected
crates/uplc/tests/conformance/term/constant-case/case-list-empty-too-many-branches/: case-list-empty-too-many-branches.uplc
crates/uplc/tests/conformance/term/fuzz_0017/: fuzz_0017.uplc  fuzz_0017.uplc.budget.expected  fuzz_0017.uplc.expected
crates/uplc_macros/: Cargo.toml
crates/uplc_macros/src/: lib.rs
(+874 files in other folders)
