[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
description = "An attempt at a faster UPLC evaluator"
edition = "2021"
license = "Apache-2.0"
authors = ["Lucas Rosa <x@rvcas.dev>"]
repository = "https://github.com/pragma-org/uplc"
homepage = "https://github.com/pragma-uplc/uplc"
documentation = "https://docs.rs/uplc-turbo"
