[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
description = "A UPLC Evaluator as a CEK machine"
edition = "2021"
license = "Apache-2.0"
authors = ["PRAGMA <hello@pragma.io>", "Lucas Rosa <x@rvcas.dev>"]
repository = "https://github.com/pragma-org/uplc"
homepage = "https://github.com/pragma-uplc/uplc"
documentation = "https://docs.rs/amaru-uplc"

[workspace.dependencies]
# Internal
amaru-uplc = { version = "0.1.0", path = "./crates/uplc" }
amaru-uplc-macros = { version = "0.1.0", path = "./crates/uplc-macros" }
# External
append-only-vec = "0.1.8"
blst = "0.3.13"
bumpalo = "3.16.0"
chumsky = "=1.0.0-alpha.8"
criterion = "0.7.0"
cryptoxide = "0.4.4"
divan = "0.1.21"
hamming = "0.1.3"
hex = "0.4.3"
insta = "1.40.0"
itertools = "0.13.0"
minicbor = "0.25.1"
num = "0.4.3"
num-bigint = "0.4"
num-integer = "0.1"
once_cell = "1.20.2"
ouroboros = "0.18.4"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rayon = "1.11.0"
secp256k1 = "0.30.0"
syn = "2.0.77"
thiserror = "1.0.63"
walkdir = "2.5.0"
