[package]
name = "uplc-fuzz"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "uplc-fuzz"
path = "src/main.rs"

[dependencies]
uplc-turbo = { path = "../uplc" }
bumpalo = { version = "3.16.0", features = ["collections"] }
crossbeam-channel = "0.5"
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
num-bigint = "0.4"
num-traits = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ratatui = "0.29"
crossterm = "0.28"
