[package]
name = "uplc-turbo"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = true

[dependencies]
blst = "0.3.13"
bumpalo = { version = "3.16.0", features = ["collections"] }
chumsky = { version = "=1.0.0-alpha.7", features = ["pratt"] }
cryptoxide = "0.4.4"
minicbor = { version = "0.25.1", features = ["std"] }
once_cell = "1.20.2"
ibig = { version = "0.3", default-features = false, features = ["std"] }
secp256k1 = "0.30.0"
thiserror = "1.0.63"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.40.0"
itertools = "0.13.0"
ouroboros = "0.18.4"
pretty_assertions = "1.4.0"
uplc_macros = { version = "0.1.0", path = "../uplc_macros" }

[[bench]]
name = "bench_main"
harness = false
