[package]
name = "amaru-uplc"
build = "build.rs"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = true

[build-dependencies]
walkdir.workspace = true

[dependencies]
append-only-vec.workspace = true
blst.workspace = true
bumpalo = { workspace = true, features = ["collections"] }
chumsky = { workspace = true, features = ["pratt"] }
cryptoxide = { workspace = true, features = ["ripemd160"] }
divan.workspace = true
hamming.workspace = true
hex.workspace = true
minicbor = { workspace = true, features = ["std"] }
num-bigint.workspace = true
num-integer.workspace = true
num.workspace = true
once_cell.workspace = true
secp256k1.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta.workspace = true
itertools.workspace = true
ouroboros.workspace = true
pretty_assertions.workspace = true
rayon.workspace = true

[features]
alloc_profiler = []

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "use_cases"
harness = false

[[bench]]
name = "turbo"
harness = false

[[bench]]
name = "flat_decode"
harness = false

[[bench]]
name = "bytecode"
harness = false
